# sutracli

./: .gitignore  .pre-commit-config.yaml  AGENT_QUERIES_USAGE.md  DESIGN_FAULTS_ANALYSIS.txt  INSTALL.md  MANIFEST.in  PIP_INSTALL_SUMMARY.md  README.md  SETUP.md  ast_sqlite_schema.sql  example_incremental_usage.py  main.py  pyproject.toml  requirements.txt  roadmap_agent_system_prompt.txt  test_pip_install.py  treesitter_builder.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: doctor.yml  publish-to-pypi.yml
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: baml.toml  clients.baml  prompts.baml  types.baml
baml_src/agents/: prompts.baml  types.baml
baml_src/agents/developer/: main.baml  types.baml
baml_src/agents/qa_engineer/: types.baml
baml_src/agents/roadmap/: main.baml  prompts.baml  types.baml
baml_src/agents/shared/: project_context.baml  sutra_memory_types.baml  system_info.baml  workspace_structure.baml
baml_src/cross_indexing/: system_info_cross_indexing.baml  tools.baml  types.baml
baml_src/cross_indexing/code_manager/: prompts.baml  types.baml
baml_src/cross_indexing/phase1_package_discovery/: prompts.baml  tests.baml
baml_src/cross_indexing/phase2_import_discovery/: prompts.baml
baml_src/cross_indexing/phase3_implementation_discovery/: prompts.baml
baml_src/cross_indexing/phase4_data_splitting/: prompt.baml  types.baml
baml_src/cross_indexing/phase5_connection_matching/: connection_matching.baml  prompt.baml  types.baml
baml_src/cross_indexing/task_filter/: prompts.baml  types.baml
baml_src/cross_indexing/technology_correction/: prompt.baml  types.baml
baml_src/test/: prompts.baml  tests.baml
baml_src/tools/: prompts.baml  tool_prompt.baml  tool_types.baml  types.baml
baml_src/tools/completion/: types.baml
baml_src/tools/database/: prompts.baml  types.baml
baml_src/tools/list_files/: prompts.baml  prompts_with_project_name.baml  prompts_without_project_name.baml  types.baml
baml_src/tools/search_keyword/: prompt_with_project_name.baml  prompt_without_project_name.baml  prompts.baml  types.baml
baml_src/tools/semantic_search/: prompts.baml  types.baml
baml_src/tools/termianl/: prompts.baml  types.baml
cli/: __init__.py  arg_parser.py  commands.py  main.py  modern_cli.py  setup.py  sutra_cli.py
configs/: local.json  system.json
docs/: CROSS_PROJECT_INDEXER_FLOW.md  DEVELOPMENT.md
indexer/: .gitignore  PROJECT_SUMMARY.md  README.md  USAGE.md  ast_extraction_results.json  ast_parser.py  debug_ast_structure.py  debug_class_content.py  debug_class_results.json  debug_simple.py  debug_ts_class_vars.py  demo_nested_extraction.py  enhanced_ast_parser.py  export_ast_to_json.py  nested_function_extraction_results.json  quick_test.py  requirements.txt  show_relationships.py  test_class_methods.py  test_class_variables.py  test_directory_extraction.py  test_extractor_output.txt  test_nested_extraction.py  test_symbol_extraction.py
indexer/examples/: symbol_extraction_example.py
indexer/extractors/: __init__.py  java_extractor.py  python_extractor.py  typescript_extractor.py
indexer/relationship_extractors/: __init__.py  python_extractor.py  typescript_extractor.py
indexer/symbol_extractors/: __init__.py  java_extractor.py  python_extractor.py  typescript_extractor.py
indexer/test_files/: test_java.java  test_python.py  test_typescript.ts
indexer/utils/: __init__.py  file_utils.py  langauge_extension_map.py  supported_languages.py
scripts/: build.sh  build_and_setup.sh  build_linter_bundles.sh  build_nuitka.sh  generate-baml.sh  setup-dev.sh
src/: __init__.py
src/agent_management/: __init__.py
src/agent_management/post_requisites/: __init__.py  config.py  handlers.py
src/agent_management/prerequisites/: __init__.py  agent_config.py  executor.py  indexing_handler.py
src/agent_management/providers/: __init__.py  config.py  gemini.py  manager.py  rovodev.py
src/agents/: __init__.py
src/agents/agent_roadmap/: __init__.py  tool_list.py
src/agents/shared/: __init__.py  project_context.py  sutra_memory.py  system_info.py  workspace_structure.py
src/agents_new/: __init__.py  executor.py
src/agents_new/utils/: __init__.py  project_context.py  system_info.py
src/cli/: __init__.py  agent_config.py  auth_command.py  commands.py  main.py  modern_cli.py  parser.py  phase5_command.py  utils.py
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  embedding_engine.py  simple_processor.py  vector_db.py  vector_store.py
src/graph/: __init__.py  converter.py  cross_project_indexer.py  graph_operations.py  incremental_indexing.py  project_indexer.py  sqlite_client.py
src/indexer/: __init__.py  ast_parser.py  export_ast_to_json.py  show_relationships.py  test_extractor.py
src/indexer/extractors/: __init__.py  (+3 more)
src/models/: __init__.py  agent.py  schema.py
src/processors/: __init__.py  data_processor.py  node_embedding_processor.py
src/queries/: __init__.py  agent_extraction_queries.py  agent_queries.py  agent_query_architecture.md  ai_agent_navigation_plan.md  creation_queries.py  extraction_queries.py  graph_queries.py  how_ai_agents_work.md  new_agent_queries.md  roadmap_agent_db_contract.md  roadmap_agent_implementation.md  roadmap_agent_plan.md
src/services/: __init__.py  agent_connection_enhancer.py  agent_service.py  agent_service_new.py  baml_service.py  project_manager.py
src/sutrakit/: __init__.py  setup_directories.py  setup_linters.py
src/tools/: __init__.py  build_tool_status.py  delivery_actions.py  executor.py  guidance_builder.py  tool_action.py  tool_executor.py
src/utils/: __init__.py  baml_utils.py  connection_utils.py  console.py  debug_utils.py  error_utils.py  file_utils.py  hash_utils.py  helpers.py  ignore_patterns.py  json_serializer.py  langauge_extension_map.py  logging.py  performance_monitor.py  system_utils.py  version_checker.py  xml_parser.py  xml_parsing_exceptions.py  xml_preprocessor.py
(+367 files in other folders)
