[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="sutrakit"
version="0.1.34"
description="Sutrakit is an AI-powered code manager for coding agents. It spawns agents for multiple projects, connects repos through cross-indexing, and builds dependency graphs for better change suggestions. By automating planning and updates, it helps teams reduce development cost, save time, and improve productivity."
readme="README.md"
license = {file = "LICENSE"}
authors = [
    {name="Sutra Graph"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "cli", "code-analysis", "code-completion", "code-manager", "cost-optimization", "code-automation", "coding-agent", "cross-repository-intelligence", "roadmap-planning"]
requires-python=">=3.11"
dependencies = [
    "pydantic==2.11.5",
    "loguru==0.7.3",
    "onnxruntime==1.22.0",
    "numpy==2.2.6",
    "tokenizers==0.21.1",
    "sqlite-vec==0.1.6",
    "pysqlite3-binary==0.5.4",
    "requests==2.32.3",
    "trafilatura==2.0.0",
    "markdownify==1.1.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack>=0.9.0",
    "setuptools==80.9.0",
    "prompt_toolkit==3.0.48",
    "rich==14.1.0",
    "baml-py==0.207.0",
]

[project.urls]
Homepage="https://github.com/sutragraph/sutracli"
Repository="https://github.com/sutragraph/sutracli"
Issues="https://github.com/sutragraph/sutracli/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]

[project.scripts]
sutrakit="cli:main"
sutrakit-setup="cli:setup_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["*"]
exclude = ["dist*", "build*"]
